--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,27 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Template • TodoMVC</title>
+		<link rel="icon" type="image/png" href="./assets/favicon.png" />
 	</head>
 	<body>
 		<section class="todoapp">
 			<header class="header">
 				<h1>Tareas</h1>
+				<div class="container">
+					<h4>Prioridad</h4>
+					<div class="form-check form-check-inline">
+					   <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="2">
+					   <label class="form-check-label" for="exampleRadios1">Alta</label>
+					</div>
+					<div class="form-check form-check-inline">
+					   <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="1">
+					   <label class="form-check-label" for="exampleRadios2">Media</label>
+					</div>
+					<div class="form-check form-check-inline">
+					   <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="0" checked>
+					   <label class="form-check-label" for="exampleRadios3">Baja</label>
+					</div>
+
 				<input class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
@@ -36,6 +52,7 @@
 					</li> -->
 				</ul>
 			</section>
+			
 			<!-- This footer should hidden by default and shown when there are todos -->
 			<footer class="footer">
 				<!-- This should be `0 items left` by default -->
@@ -53,14 +70,14 @@
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed">Borrar completados</button>
+				<button class="clear-completed">Borrar complet</button>
+				
 			</footer>
 		</section>
 		<footer class="info">
-
 			<p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 			<!-- Change this out with your name and url ↓ -->
-			<p>Creado por <a href="http://todomvc.com">ti</a></p>
+			<p>Creado por <a href="http://todomvc.com">David Mur</a></p>
 			<p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
         
