--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Template • TodoMVC</title>
-		<link rel="icon" type="image/png" href="./favicon.png"/>
+		<link rel="icon" type="image/png" href="./assets/favicon.png"/>
 	</head>
 	<body>
 		<section class="todoapp">
